--- a/elements/site-lisp/lsp-java-simple/install/pom.xml
+++ b/elements/site-lisp/lsp-java-simple/install/pom.xml
@@ -6,6 +6,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <properties>
     <root.install.dir>${user.home}/.emacs.d/eclipse.jdt.ls</root.install.dir>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <packaging>pom</packaging>
   <build>
@@ -13,7 +14,7 @@
       <plugin>
         <groupId>com.googlecode.maven-download-plugin</groupId>
         <artifactId>download-maven-plugin</artifactId>
-        <version>1.3.0</version>
+        <version>1.6.8</version>
         <executions>
           <execution>
             <phase>process-resources</phase>
@@ -35,7 +36,7 @@
               <goal>wget</goal>
             </goals>
             <configuration>
-              <url>https://github.com/emacs-lsp/lsp-java/releases/download/2.2/Pivotal.vscode-spring-boot-1.6.0.vsix</url>
+              <url>https://sourceforge.net/projects/entropy-emacs-cabinet/files/LSP/lsp-java/lsp-java-v3.1_jdtls_release/Pivotal.vscode-spring-boot-1.6.0.vsix</url>
               <outputFileName>vscode-extension.zip</outputFileName>
               <outputDirectory>${project.build.directory}</outputDirectory>
             </configuration>
@@ -47,7 +48,7 @@
               <goal>wget</goal>
             </goals>
             <configuration>
-              <url>https://github.com/emacs-lsp/lsp-java/releases/download/2.2/vscjava.vscode-java-dependency-0.5.1.vsix</url>
+              <url>https://sourceforge.net/projects/entropy-emacs-cabinet/files/LSP/lsp-java/lsp-java-v3.1_jdtls_release/vscjava.vscode-java-dependency-0.5.1.vsix</url>
               <outputFileName>java-dependency.zip</outputFileName>
               <outputDirectory>${project.build.directory}</outputDirectory>
             </configuration>
@@ -59,7 +60,7 @@
               <goal>wget</goal>
             </goals>
             <configuration>
-              <url>https://github.com/emacs-lsp/lsp-java/releases/download/2.2/dgileadi.java-decompiler-0.0.2.vsix</url>
+              <url>https://sourceforge.net/projects/entropy-emacs-cabinet/files/LSP/lsp-java/lsp-java-v3.1_jdtls_release/dgileadi.java-decompiler-0.0.2.vsix</url>
               <outputFileName>java-decompiler.zip</outputFileName>
               <outputDirectory>${project.build.directory}</outputDirectory>
             </configuration>
@@ -71,7 +72,7 @@
               <goal>wget</goal>
             </goals>
             <configuration>
-                <url>https://github.com/emacs-lsp/lsp-java/releases/download/3.1/vscjava.vscode-java-test-0.24.1.vsix</url>
+                <url>https://sourceforge.net/projects/entropy-emacs-cabinet/files/LSP/lsp-java/lsp-java-v3.1_jdtls_release/vscjava.vscode-java-test-0.28.0.vsix</url>
               <outputFileName>vscode-java-test.zip</outputFileName>
               <outputDirectory>${project.build.directory}</outputDirectory>
             </configuration>
@@ -81,19 +82,19 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.6</version>
+        <version>3.1.0</version>
         <executions>
           <execution>
             <id>prepare</id>
             <phase>process-resources</phase>
             <configuration>
-              <tasks>
+              <target>
                 <untar src="${project.build.directory}/jdt-language-server-latest.tar.gz" compression="gzip" dest="${jdt.js.server.root}" />
                 <unzip src="${project.build.directory}/vscode-extension.zip" dest="${project.build.directory}/vscode-extension-extracted" />
                 <unzip src="${project.build.directory}/java-dependency.zip" dest="${project.build.directory}/java-dependency" />
                 <unzip src="${project.build.directory}/vscode-java-test.zip" dest="${jdt.js.server.root}/java-test" />
                 <unzip src="${project.build.directory}/java-decompiler.zip" dest="${jdt.js.server.root}/java-decompiler" />
-              </tasks>
+              </target>
             </configuration>
             <goals>
               <goal>run</goal>
@@ -104,7 +105,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.3.0</version>
         <executions>
           <execution>
             <id>copy</id>
@@ -117,14 +118,14 @@
                 <artifactItem>
                   <groupId>com.microsoft.java</groupId>
                   <artifactId>com.microsoft.java.debug.plugin</artifactId>
-                  <version>0.24.0</version>
+                  <version>0.39.0</version>
                   <outputDirectory>${java.debug.root}</outputDirectory>
                   <destFileName>java.debug.plugin.jar</destFileName>
                 </artifactItem>
                 <artifactItem>
                   <groupId>org.junit.platform</groupId>
                   <artifactId>junit-platform-console-standalone</artifactId>
-                  <version>1.6.2</version>
+                  <version>1.9.0</version>
                   <outputDirectory>${junit.runner.root}</outputDirectory>
                   <destFileName>${junit.runner.fileName}</destFileName>
                 </artifactItem>
@@ -135,7 +136,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.3.0</version>
         <executions>
           <execution>
             <id>copy-boot-server</id>
