--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,5 +43,7 @@ jobs:
           echo "(setq entropy/emacs-ide-use-for-all 'lsp)" >> custom.el
           env EEMACS_CI_TEST=1 EEMACS_MAKE_ALL=1 EEMACS_DEBUG=1 make install-eemacs-ext-build
           env EEMACS_CI_TEST=1 EEMACS_MAKE_ALL=1 EEMACS_DEBUG=1 make all
+          echo '----------> Test daemon init ...'
           env EEMACS_CI_TEST=1 EEMACS_MAKE_ALL=1 emacs -Q -l init.el --fg-daemon
+          echo '----------> Test pdump ...'
           env EEMACS_CI_TEST=1 EEMACS_MAKE_ALL=1 make dump
