--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,11 @@ jobs:
       matrix:
         emacs-version: [27.2, 28.2, 29.1]
         experimental: [false]
-        include:
-          - emacs-version: snapshot
-            experimental: true
+        # we've not prepared for emacs_30.0.50
+        #
+        # include:
+        #   - emacs-version: snapshot
+        #     experimental: true
 
     steps:
       - name: setenv
